--- a/Słodkie Zwierzątka.html
+++ b/Słodkie Zwierzątka.html
@@ -99,17 +99,17 @@ body {
 <p>Kliknij gdziekolwiek, aby włączyć muzykę 🎵</p>
 <hr>
     <br>
-    <img src="chomik.jpeg" width="600" height="500">
+    <img src="./chomik.jpeg" width="600" height="500"/>
     <br>
     <br>
     <br>
     <br>
-    <img src="kot 1.jpeg" width="600" height="500">
+    <img src="kot 1.jpeg" width="600" height="500"/>
     <br>
     <br>
     <br>
     <br>
-    <img src="pisek 1.jpeg" width="600" height="500">
+    <img src="pisek 1.jpeg" width="600" height="500"/>
     <br>
     <br>
     <br>
