--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <br>
                 <br>
                 <p>O to link do strony ze słodkimi zwierzątkami:</p>
-                <a href="https://wiwik101.github.io/S-odkie-zwierz-tka2/S%C5%82odkie%20Zwierz%C4%85tka.html">Słodkie zwierzątkami</a>
+                <a href="https://wiwik101.github.io/Menu1/S%C5%82odkie%20Zwierz%C4%85tka.html">Słodkie zwierzątkami</a>
                
 
             </section>
